
	* main.c (main): Declare signame_init() if we're going to call it.

2000-01-29  Eli Zaretskii  <eliz@is.elta.co.il>

	* Makefile.DOS.template: Track changes in Makefile.in
	(install-recursive, uninstall-recursive): Add missing targets.
	(DESTDIR): Define.
	(install-binPROGRAMS, uninstall-binPROGRAMS): Use $(DESTDIR).

	* default.c (default_variables) [__MSDOS__]: Define CXX to gpp.

2000-01-25  Paul D. Smith  <psmith@gnu.org>

	Change gettext support to use the simplified version in libit 0.7.

	* getopt.c, make.h: Use gettext.h instead of libintl.h.
	* ABOUT-NLS, gettext.h, gettext.c: New files from libit 0.7.
	Modified to remove some static declarations which aren't defined.
	* acconfig.h: Use new gettext #defines.
	* acinclude.m4: Add fp_WITH_GETTEXT; remove AM_GNU_GETTEXT.
	* configure.in: Call fp_WITH_GETTEXT instead.
	* Makefile.am: New gettext stuff.  Also force inclusion of glob
	files for systems which have LIBC glob.

	* i18n/Makefile.am, i18n/.cvsignore: New dir for translation files.
	* i18n/de.po, i18n/es.po, i18n/fr.po, i18n/ko.po, i18n/nl.po:
	* i18n/pl.po, i18n/ru.po: Import translations already done for
	earlier versions of GNU make.  Thanks for that work!!

	* po/Makefile.in.in, po/POTFILES.in: Removed.

2000-01-23  Paul D. Smith  <psmith@gnu.org>

	* main.c (decode_debug_flags): If debug_flag is set, enable all
	debugging levels.
	(debug_flag): Resurrect this flag variable.
	(switches): Make -d give the old behavior of turning on all
	debugging.  Change --debug alone to emit basic debugging and take
	optional arguments to expand debugging.
	* NEWS: Document the new debugging options.

	* remake.c (no_rule_error): Remove this function.  This tries to
	fix a real problem--see the description with the introduction of
	this function below.  However, the cure is worse than the disease
	and this approach won't work.
	(remake_file): Put the code from no_rule_error back here.
	(update_file_1): Remove call to no_rule_error.
